<LinearLayout xmlns:tools="http://schemas.android.com/tools"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" 
              android:background="#fff"
>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Categoria" 
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/spinCategoria"
        android:layout_width="fill_parent"
        android:layout_height="50dp"         
        android:prompt="@string/anaquel_categoria" 
        android:textColor="#000000"/>
            
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Marca" 
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/spinMarca"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:prompt="@string/anaquel_marca" 
        android:textColor="#000000"/>
            
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Producto"
        android:textColor="#000000"    />

    <Spinner
        android:id="@+id/spinProducto"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:prompt="@string/anaquel_producto"
        android:textColor="#000000"    />
    
    
    

</LinearLayout>

