<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"    
              android:paddingTop="80dp"              
              android:layout_gravity="center_vertical"
              android:background="#fff"
>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="30dp" >
        <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center" 
        android:textSize="@dimen/size_text_title"/>-->
    
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            
    
    />
  
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_usuario"
            android:width="70dp"
            android:gravity="right" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" 
            
            
            
        >
            
            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pass"
            
            android:gravity="right"/>

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"            
            android:inputType="textPassword" 
            
        >
        </EditText>

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="20dp">
        
        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/login_entrar" />

    </LinearLayout>
    
</LinearLayout>