<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ProductoActivity" 
              android:background="#fff"
>

  
    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" 
        android:visibility="gone">
    </ExpandableListView>
    
    
    
    
    
    
    <TextView
        android:id="@+id/textCategoria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Categoria"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/spinCategoria"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:prompt="@string/anaquel_categoria"
        android:textColor="#000000"    />
            
    <TextView
        android:id="@+id/textMarca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Marca" 
        android:textStyle="bold"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/spinMarca"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:prompt="@string/anaquel_marca" 
        android:textColor="#000000"/>
            
    <TextView
        android:id="@+id/textProducto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Producto"
        android:textStyle="bold" 
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/spinProducto"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:prompt="@string/anaquel_producto" />
        
  
            <RadioGroup
               android:id="@+id/radgrupo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
               android:visibility="gone"
               android:orientation='horizontal'
            >

               <RadioButton
                   android:id="@+id/sku"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Producto" 
                   android:checked="true" 
               android:visibility="gone"  
               android:textColor="#000000"  
       />

               <RadioButton
                   android:id="@+id/marcacategoria"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Categoria-marca" 
               android:visibility="gone"
               android:textColor="#000000"    
       />

           </RadioGroup>
    
</LinearLayout>